--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   milestone:
     if: startsWith(github.ref, 'refs/tags')
-    uses: ComPWA/actions/.github/workflows/close-milestone.yml@dev
+    uses: ComPWA/actions/.github/workflows/close-milestone.yml@v1
   push:
     if: startsWith(github.ref, 'refs/tags') && !github.event.release.prerelease
-    uses: ComPWA/actions/.github/workflows/push-to-version-branches.yml@dev
+    uses: ComPWA/actions/.github/workflows/push-to-version-branches.yml@v1
