--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,11 @@ on:
 
 jobs:
   pytest:
-    uses: ComPWA/actions/.github/workflows/pytest.yml@dev
+    uses: ComPWA/actions/.github/workflows/pytest.yml@v1
     with:
       coverage-target: repo_maintenance
       macos-python-version: "3.7"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
     if: inputs.specific-pip-packages == ''
-    uses: ComPWA/actions/.github/workflows/pre-commit.yml@dev
+    uses: ComPWA/actions/.github/workflows/pre-commit.yml@v1
