FIX: get package name from `src/` directory
See missing coverage report:
https://github.com/ComPWA/repo-maintenance/actions/runs/4031954995/jobs/6931750585

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
   pytest:
     uses: ComPWA/actions/.github/workflows/pytest.yml@v1
     with:
-      coverage-target: repo_maintenance
+      coverage-target: repoma
       macos-python-version: "3.7"
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   style:
