FEAT: enforce new shared workflows (#99)
* DX: outsource CD workflow to ComPWA/actions

* DX: run `editorconfig-checker` on pre-commit.ci

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,6 @@ ci:
     - pylint
     - repoma-self-check
     # hooks that don't work on pre-commit.ci
-    - editorconfig-checker
     - pyright
 
 repos:
@@ -48,6 +47,7 @@ repos:
         pass_filenames: false
         args:
           - --allow-labels
+          - --no-pypi
           - --repo-name=repo-maintenance
           - --repo-title=ComPWA Repository Maintenance
 
