--- a/.github/workflows/clean-caches.yml
+++ b/.github/workflows/clean-caches.yml
@@ -1,4 +1,4 @@
-name: Clean cache
+name: Clean caches
 
 on:
   pull_request:
@@ -8,7 +8,9 @@ on:
 
 jobs:
   cleanup:
-    name: Remove PR caches
+    name: Remove caches
     runs-on: ubuntu-22.04
     steps:
       - uses: ComPWA/actions/clean-caches@v1
+        with:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
