DX: specify for which branch to clean caches

--- a/.github/workflows/clean-caches.yml
+++ b/.github/workflows/clean-caches.yml
@@ -5,6 +5,11 @@ on:
     types:
       - closed
   workflow_dispatch:
+    inputs:
+      ref:
+        description: Clean caches for this branch name or ref
+        required: false
+        type: string
 
 jobs:
   cleanup:
@@ -14,3 +19,4 @@ jobs:
       - uses: ComPWA/actions/clean-caches@v1
         with:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ inputs.ref }}
