FIX: inherit secrets for pushing to PyPI

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,4 +12,5 @@ jobs:
     uses: ComPWA/actions/.github/workflows/close-milestone.yml@v1
   push:
     if: startsWith(github.ref, 'refs/tags') && !github.event.release.prerelease
+    secrets: inherit
     uses: ComPWA/actions/.github/workflows/push-to-version-branches.yml@v1
