FEAT: enforce Taplo as a TOML formatter

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -156,3 +156,8 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
+
+  - repo: https://github.com/ComPWA/mirrors-taplo
+    rev: v0.8.0
+    hooks:
+      - id: taplo
