--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,7 +13,6 @@ github:
 
 vscode:
   extensions:
-    - bungcip.better-toml
     - christian-kohler.path-intellisense
     - cschleiden.vscode-github-actions
     - davidanson.vscode-markdownlint
@@ -31,6 +30,7 @@ vscode:
     - ryanluker.vscode-coverage-gutters
     - stkb.rewrap
     - streetsidesoftware.code-spell-checker
+    - tamasfe.even-better-toml
     - travisillig.vscode-json-stable-stringify
     - tyriar.sort-lines
     - yzhang.markdown-all-in-one
