--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,5 @@
 {
   "recommendations": [
-    "bungcip.better-toml",
     "christian-kohler.path-intellisense",
     "cschleiden.vscode-github-actions",
     "davidanson.vscode-markdownlint",
@@ -18,6 +17,7 @@
     "ryanluker.vscode-coverage-gutters",
     "stkb.rewrap",
     "streetsidesoftware.code-spell-checker",
+    "tamasfe.even-better-toml",
     "travisillig.vscode-json-stable-stringify",
     "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
