--- a/.taplo.toml
+++ b/.taplo.toml
@@ -1,3 +1,10 @@
+exclude = [
+    "Cargo.toml",
+    "Manifest.toml",
+    "Project.toml",
+    "labels*.toml",
+]
+
 [formatting]
 align_entries = false
 array_auto_collapse = false
