--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,15 +2,14 @@ ci:
   autoupdate_commit_msg: "MAINT: autoupdate pre-commit hooks"
   autoupdate_schedule: monthly
   skip:
-    # local hooks
     - check-dev-files
     - flake8
     - format-setup-cfg
     - mypy
     - pylint
-    - repoma-self-check
-    # hooks that don't work on pre-commit.ci
     - pyright
+    - repoma-self-check
+    - taplo
 
 repos:
   - repo: meta
@@ -156,3 +155,8 @@ repos:
       - id: pyupgrade
         args:
           - --py36-plus
+
+  - repo: https://github.com/ComPWA/mirrors-taplo
+    rev: v0.8.0
+    hooks:
+      - id: taplo
