DX: switch to official GH Actions VSC extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,11 +14,11 @@ github:
 vscode:
   extensions:
     - christian-kohler.path-intellisense
-    - cschleiden.vscode-github-actions
     - davidanson.vscode-markdownlint
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
+    - github.vscode-github-actions
     - github.vscode-pull-request-github
     - ms-python.flake8
     - ms-python.isort
