--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,11 @@
 {
   "recommendations": [
     "christian-kohler.path-intellisense",
-    "cschleiden.vscode-github-actions",
     "davidanson.vscode-markdownlint",
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "github.vscode-github-actions",
     "github.vscode-pull-request-github",
     "ms-python.flake8",
     "ms-python.isort",
