--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,7 +87,7 @@ repos:
     hooks:
       - id: editorconfig-checker
         name: editorconfig
-        exclude: >
+        exclude: >-
           (?x)^(
             .*\.py
           )$
