DX: set `ec` as alias for `editorconfig-checker`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -87,6 +87,7 @@ repos:
     hooks:
       - id: editorconfig-checker
         name: editorconfig
+        alias: ec
         exclude: >-
           (?x)^(
             .*\.py
