--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,11 +23,11 @@
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "cSpell.enabled": true,
   "coverage-gutters.coverageFileNames": ["coverage.xml"],
   "coverage-gutters.coverageReportFileName": "**/htmlcov/index.html",
   "coverage-gutters.showGutterCoverage": false,
   "coverage-gutters.showLineCoverage": true,
-  "cSpell.enabled": true,
   "editor.formatOnSave": true,
   "editor.rulers": [88],
   "files.watcherExclude": {
@@ -38,6 +38,7 @@
   },
   "flake8.importStrategy": "fromEnvironment",
   "git.rebaseWhenSync": true,
+  "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   "isort.check": true,
   "isort.importStrategy": "fromEnvironment",
   "pylint.importStrategy": "fromEnvironment",
