--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 ci:
   autoupdate_commit_msg: "MAINT: autoupdate pre-commit hooks"
-  autoupdate_schedule: monthly
+  autoupdate_schedule: quarterly
   skip:
     - check-dev-files
     - flake8
