MAINT: switch to `tomlkit`
Just like `ruamel.yaml`, `tomlkit` perserves formatting of the TOML file when dumping it

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ install_requires =
     pip-tools
     PyYAML
     ruamel.yaml  # better YAML dumping
-    toml
+    tomlkit
 packages = find:
 package_dir =
     =src
