--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,80 @@ src_paths = [
     "src",
     "tests",
 ]
+
+[tool.ruff]
+extend-select = [
+    "A",
+    "B",
+    "BLE",
+    "C4",
+    "C90",
+    "D",
+    "EM",
+    "ERA",
+    "I",
+    "ICN",
+    "INP",
+    "ISC",
+    "N",
+    "NPY",
+    "PGH",
+    "PIE",
+    "PL",
+    "Q",
+    "RET",
+    "RSE",
+    "RUF",
+    "S",
+    "SIM",
+    "T20",
+    "TCH",
+    "TID",
+    "TRY",
+    "UP",
+    "YTT",
+]
+external = [
+    "D100",
+    "R701",
+]
+ignore = [
+    "D101",    # class docstring
+    "D102",    # method docstring
+    "D103",    # function docstring
+    "D105",    # magic method docstring
+    "D107",    # init docstring
+    "D203",    # conflicts with D211
+    "D213",    # multi-line docstring should start at the second line
+    "D407",    # missing dashed underline after section
+    "D416",    # section name does not have to end with a colon
+    "E501",    # handled by black formatting
+    "PLR0913", # sympy functions
+    "PLW2901", # often used for xreplace
+    "S301",    # allow pickle
+    "SIM108",  # if-else-block-instead-of-if-exp
+]
+show-fixes = true
+src = [
+    "src",
+    "tests",
+]
+target-version = "py37"
+task-tags = ["cspell"]
+
+[tool.ruff.isort]
+known-first-party = ["repoma"]
+
+[tool.ruff.per-file-ignores]
+"setup.py" = ["D100"]
+"tests/*" = [
+    "D",
+    "INP001",
+    "PGH001",
+    "PLR0913",
+    "PLR2004",
+    "S101",
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"
