DX: enforce Ruff as linter

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -13,6 +13,7 @@ github:
 
 vscode:
   extensions:
+    - charliermarsh.ruff
     - christian-kohler.path-intellisense
     - davidanson.vscode-markdownlint
     - eamodio.gitlens
