--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
   "rewrap.wrappingColumn": 88,
+  "ruff.enable": true,
+  "ruff.organizeImports": true,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
     "*/.pydocstyle": true,
