--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,6 +19,7 @@ vscode:
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
+    - garaioag.garaio-vscode-unwanted-recommendations
     - github.vscode-github-actions
     - github.vscode-pull-request-github
     - ms-python.flake8
