--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,6 @@
     "garaioag.garaio-vscode-unwanted-recommendations",
     "github.vscode-github-actions",
     "github.vscode-pull-request-github",
-    "ms-python.isort",
     "ms-python.pylint",
     "ms-python.python",
     "ms-python.vscode-pylance",
@@ -22,5 +21,5 @@
     "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
   ],
-  "unwantedRecommendations": ["ms-python.flake8"]
+  "unwantedRecommendations": ["ms-python.flake8", "ms-python.isort"]
 }
