--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,7 +48,7 @@
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": false,
   "python.linting.mypyEnabled": true,
-  "python.linting.pydocstyleEnabled": true,
+  "python.linting.pydocstyleEnabled": false,
   "python.linting.pylamaEnabled": false,
   "python.linting.pylintEnabled": false,
   "python.testing.pytestArgs": ["--color=no", "--no-cov", "-vv"],
@@ -59,7 +59,6 @@
   "ruff.organizeImports": true,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
-    "*/.pydocstyle": true,
     ".constraints/*.txt": true,
     ".github/workflows/cd.yml": true,
     ".github/workflows/ci.yml": true,
