BEHAVIOR: remove flake8, isort, pydocstyle, and pylint (#145)
* DX: recommend unwanted recommendations extension
* DX: remove `flake8` linter
* DX: remove `isort` formatter
* DX: remove `pydocstyle` linting
* DX: remove `pylint` as linter
* DX: uninstall `pep8-naming` plugin for `flake8`
* ENH: run pre-commit check after other checks
* MAINT: add more unwanted extensions
* MAINT: remove `pylint` ignore comments
* MAINT: remove `noqa: F401` statement from notebooks
  Can be ignored through Ruff config

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,11 +6,9 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "garaioag.garaio-vscode-unwanted-recommendations",
     "github.vscode-github-actions",
     "github.vscode-pull-request-github",
-    "ms-python.flake8",
-    "ms-python.isort",
-    "ms-python.pylint",
     "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-vsliveshare.vsliveshare",
@@ -21,5 +19,12 @@
     "tamasfe.even-better-toml",
     "tyriar.sort-lines",
     "yzhang.markdown-all-in-one"
+  ],
+  "unwantedRecommendations": [
+    "bungcip.better-toml",
+    "ms-python.flake8",
+    "ms-python.isort",
+    "ms-python.pylint",
+    "travisillig.vscode-json-stable-stringify"
   ]
 }
