--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -19,11 +19,9 @@ vscode:
     - eamodio.gitlens
     - editorconfig.editorconfig
     - esbenp.prettier-vscode
+    - garaioag.garaio-vscode-unwanted-recommendations
     - github.vscode-github-actions
     - github.vscode-pull-request-github
-    - ms-python.flake8
-    - ms-python.isort
-    - ms-python.pylint
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-vsliveshare.vsliveshare
