--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,12 +36,8 @@
     "**/.git/**": true,
     "**/.tox/**": true
   },
-  "flake8.importStrategy": "fromEnvironment",
   "git.rebaseWhenSync": true,
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
-  "isort.check": true,
-  "isort.importStrategy": "fromEnvironment",
-  "pylint.importStrategy": "fromEnvironment",
   "python.analysis.autoImportCompletions": false,
   "python.analysis.diagnosticMode": "workspace",
   "python.analysis.inlayHints.pytestParameters": true,
@@ -51,7 +47,7 @@
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": false,
   "python.linting.mypyEnabled": true,
-  "python.linting.pydocstyleEnabled": true,
+  "python.linting.pydocstyleEnabled": false,
   "python.linting.pylamaEnabled": false,
   "python.linting.pylintEnabled": false,
   "python.testing.pytestArgs": ["--color=no", "--no-cov", "-vv"],
@@ -62,7 +58,6 @@
   "ruff.organizeImports": true,
   "search.exclude": {
     "**/tests/**/__init__.py": true,
-    "*/.pydocstyle": true,
     ".constraints/*.txt": true,
     ".github/workflows/cd.yml": true,
     ".github/workflows/ci.yml": true,
