--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,6 +22,7 @@ vscode:
     - garaioag.garaio-vscode-unwanted-recommendations
     - github.vscode-github-actions
     - github.vscode-pull-request-github
+    - ms-python.mypy-type-checker
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-vsliveshare.vsliveshare
