--- a/src/repoma/.github/workflows/ci.yml
+++ b/src/repoma/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ on:
 jobs:
   doc:
     uses: ComPWA/actions/.github/workflows/ci-docs.yml@v1
+    permissions:
+      pages: write
+      id-token: write
     with:
       specific-pip-packages: ${{ inputs.specific-pip-packages }}
   pytest:
