--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ setup_requires =
     setuptools_scm
 install_requires =
     attrs >=20.1.0  # https://www.attrs.org/en/stable/changelog.html#id82
+    html2text
     ini2toml
     nbformat
     pip-tools
