--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     ini2toml
     nbformat
     pip-tools
+    pre-commit
     PyYAML
     ruamel.yaml  # better YAML dumping
     tomlkit
