--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     "src/repoma/.template/commitlint.config.js": true
   },
   "yaml.schemas": {
+    "https://citation-file-format.github.io/1.2.0/schema.json": "CITATION.cff",
     "https://json.schemastore.org/github-workflow.json": [
       ".github/workflows/update-dependencies.yml"
     ]
