DX: switch to `black-jupyter` hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
         pass_filenames: false
         args:
           - --allow-labels
+          - --no-notebooks
           - --no-pypi
           - --repo-name=repo-maintenance
           - --repo-title=ComPWA Repository Maintenance
