--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ dev =
 [options.entry_points]
 console_scripts =
     check-dev-files = repoma.check_dev_files:main
+    colab-toc-visible = repoma.colab_toc_visible:main
     fix-nbformat-version = repoma.fix_nbformat_version:main
     format-setup-cfg = repoma.format_setup_cfg:main
     pin-nb-requirements = repoma.pin_nb_requirements:main
