--- a/pyproject.toml
+++ b/pyproject.toml
@@ -151,6 +151,7 @@ extend-select = [
     "YTT",
 ]
 ignore = [
+    "C408", # Unnecessary dict call - rewrite as a literal
     "D101", # class docstring
     "D102", # method docstring
     "D103", # function docstring
