--- a/.github/workflows/pr-linting.yml
+++ b/.github/workflows/pr-linting.yml
@@ -1,5 +1,3 @@
-# cspell:ignore agilepathway commitlint kode
-
 name: PR linting
 on:
   pull_request:
@@ -16,7 +14,7 @@ jobs:
     name: Check labels
     runs-on: ubuntu-20.04
     steps:
-      - uses: docker://agilepathway/pull-request-label-checker:latest
+      - uses: docker://agilepathway/pull-request-label-checker:latest # cspell:ignore agilepathway
         with:
           any_of: >-
             🐛 Bug,✨ Feature,⚙️ Enhancement,⚠️ Interface,❗ Behavior,📝 Docs,🔨 Maintenance,🖱️ DX
@@ -29,4 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: npm install @commitlint/config-conventional
-      - uses: JulienKode/pull-request-name-linter-action@v0.5.0
+      - run: npm install @compwa/commitlint-config
+      - name: Create commitlint config
+        run: |
+          echo "module.exports = {extends: ['@compwa/commitlint-config']}" > commitlint.config.js
+      - uses: JulienKode/pull-request-name-linter-action@v0.5.0 # cspell:ignore kode
