DX: visualize module dependencies with `pydeps`
Install graphviz with:

  conda install graphviz

and run:

  tox -e pydeps

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,20 @@ commands =
 description =
   Compute test coverage
 
+[testenv:pydeps]
+changedir = src
+commands =
+  pydeps repoma \
+    -o module_structure.svg \
+    --exclude *._* \
+    --max-bacon=1 \
+    --noshow
+deps =
+  pydeps
+description =
+  Visualize module dependencies
+passenv = *
+
 [testenv:sty]
 allowlist_externals =
   mypy
