--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,11 @@ package_dir =
     =src
 
 [options.extras_require]
+doc =
+    myst-parser
+    Sphinx
+    sphinx-book-theme
+    sphinx-copybutton
 test =
     pytest
     pytest-cov
@@ -55,6 +60,7 @@ format =
 mypy =
     mypy
     types-PyYAML
+    types-requests
     types-setuptools
     types-toml
 lint =
@@ -67,9 +73,11 @@ sty =
     %(test)s  # for pytest type hints
     pre-commit >=1.4.0
 dev =
+    %(doc)s
     %(sty)s
     %(test)s
     labels
+    sphinx-autobuild
     tox >=1.9  # for skip_install, use_develop
 
 [options.entry_points]
