--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,6 +179,13 @@ task-tags = ["cspell"]
 known-first-party = ["repoma"]
 
 [tool.ruff.per-file-ignores]
+"docs/*" = [
+    "E402",
+    "INP001",
+    "S101",
+    "S113",
+    "T201",
+]
 "setup.py" = ["D100"]
 "tests/*" = [
     "D",
