--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
-  py,
-  sty,
+  doc
+  py
+  sty
 passenv = PYTHONPATH
 skip_install = True
 skip_missing_interpreters = True
@@ -26,6 +27,67 @@ commands =
     --cov=repoma
 description =
   Compute test coverage
+
+[testenv:doc]
+allowlist_externals =
+  sphinx-build
+commands =
+  sphinx-build \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
+description =
+  Build documentation and API through Sphinx
+passenv = *
+setenv =
+  FORCE_COLOR = yes
+
+[testenv:doclive]
+allowlist_externals =
+  sphinx-autobuild
+commands =
+  sphinx-autobuild \
+    --open-browser \
+    --re-ignore .*/.ipynb_checkpoints/.* \
+    --re-ignore .*/__pycache__/.* \
+    --re-ignore .*\.gitignore \
+    --re-ignore .*\.tmp \
+    --re-ignore docs/.*\.csv \
+    --re-ignore docs/.*\.gif \
+    --re-ignore docs/.*\.gv \
+    --re-ignore docs/.*\.inv \
+    --re-ignore docs/.*\.json \
+    --re-ignore docs/.*\.pickle \
+    --re-ignore docs/.*\.png \
+    --re-ignore docs/.*\.svg \
+    --re-ignore docs/.*\.yaml \
+    --re-ignore docs/.*\.yml \
+    --re-ignore docs/_build/.* \
+    --re-ignore docs/_images/.* \
+    --re-ignore docs/api/.* \
+    --watch docs \
+    --watch src \
+    docs/ docs/_build/html
+description =
+  Set up a server to directly preview changes to the HTML pages
+passenv = *
+setenv =
+  FORCE_COLOR = yes
+
+[testenv:linkcheck]
+allowlist_externals =
+  sphinx-build
+commands =
+  sphinx-build \
+    -T \
+    -b linkcheck \
+    docs/ docs/_build/linkcheck
+description =
+  Check external links in the documentation (requires internet connection)
+passenv = *
+setenv =
+  FORCE_COLOR = yes
 
 [testenv:pydeps]
 changedir = src
