DX: remove `.prettierrc`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
         args:
           - --allow-labels
           - --no-notebooks
+          - --no-prettierrc
           - --no-pypi
           - --repo-name=repo-maintenance
           - --repo-title=ComPWA Repository Maintenance
