--- a/tox.ini
+++ b/tox.ini
@@ -75,6 +75,24 @@ passenv = *
 setenv =
   FORCE_COLOR = yes
 
+
+[testenv:docnb]
+allowlist_externals =
+  sphinx-build
+commands =
+  sphinx-build \
+    --keep-going \
+    -TW \
+    -b html \
+    docs/ docs/_build/html
+description =
+  Build documentation through Sphinx WITH output of Jupyter notebooks
+passenv = *
+setenv =
+  EXECUTE_NB = yes
+  FORCE_COLOR = yes
+  PYTHONHASHSEED = 0
+
 [testenv:linkcheck]
 allowlist_externals =
   sphinx-build
