DOC: host API documentation for `repoma` module (#193)
* DOC: add link to `.pre-commit-hooks.yaml`
* DX: recommend MyST VSCode extension
* DX: visualize module dependencies with `pydeps`
  Install graphviz with `conda install graphviz` and run `tox -e pydeps`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
   },
   "git.rebaseWhenSync": true,
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
+  "livePreview.defaultPreviewPath": "docs/_build/html",
   "mypy-type-checker.args": ["--config-file=${workspaceFolder}/pyproject.toml"],
   "mypy-type-checker.importStrategy": "fromEnvironment",
   "python.analysis.autoImportCompletions": false,
