--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ reportPrivateImportUsage = false
 reportPrivateUsage = false
 reportUnboundVariable = false
 reportUnknownArgumentType = false
+reportUnknownLambdaType = false
 reportUnknownMemberType = false
 reportUnknownParameterType = false
 reportUnknownVariableType = false
