FIX: import `OrderedDict` from `typing_extensions`

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
     PyYAML
     ruamel.yaml  # better YAML dumping
     tomlkit
+    typing-extensions; python_version<"3.7.0"
 packages = find:
 package_dir =
     =src
