--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,122 @@
 [build-system]
+build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools>=36.2.1", # environment markers
+    "setuptools>=61.2",
     "setuptools_scm",
-    "wheel",
 ]
+
+[project]
+authors = [{name = "Common Partial Wave Analysis", email = "compwa-admin@ep1.rub.de"}]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: BSD License",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python",
+    "Typing :: Typed",
+]
+dependencies = [
+    "PyYAML",
+    "attrs >=20.1.0", # https://www.attrs.org/en/stable/changelog.html#id82
+    "html2text",
+    "ini2toml",
+    "nbformat",
+    "pip-tools",
+    "pre-commit",
+    "ruamel.yaml", # better YAML dumping
+    "tomlkit",
+]
+description = "Pre-commit hooks that ensure that ComPWA repositories have a similar developer set-up"
+dynamic = ["version"]
+license = {text = "BSD 3-Clause License"}
+maintainers = [{email = "compwa-admin@ep1.rub.de"}]
+name = "repo-maintenance"
+requires-python = ">=3.7"
+
+[project.optional-dependencies]
+dev = [
+    "labels",
+    "repo-maintenance[doc]",
+    "repo-maintenance[sty]",
+    "repo-maintenance[test]",
+    "sphinx-autobuild",
+    "tox >=1.9", # for skip_install, use_develop
+]
+doc = [
+    "Sphinx",
+    "myst-parser",
+    "sphinx-argparse",
+    "sphinx-book-theme",
+    "sphinx-copybutton",
+]
+format = [
+    "black",
+]
+lint = [
+    "radon",
+    "repo-maintenance[mypy]",
+    "ruff",
+]
+mypy = [
+    "mypy",
+    "types-PyYAML",
+    "types-requests",
+    "types-setuptools",
+    "types-toml",
+]
+sty = [
+    "pre-commit >=1.4.0",
+    "repo-maintenance[format]",
+    "repo-maintenance[lint]",
+    "repo-maintenance[test]", # for pytest type hints
+]
+test = [
+    "pytest",
+    "pytest-cov",
+    "pytest-xdist",
+]
+
+[project.readme]
+content-type = "text/markdown"
+file = "README.md"
+
+[project.scripts]
+check-dev-files = "repoma.check_dev_files:main"
+colab-toc-visible = "repoma.colab_toc_visible:main"
+fix-nbformat-version = "repoma.fix_nbformat_version:main"
+format-setup-cfg = "repoma.format_setup_cfg:main"
+pin-nb-requirements = "repoma.pin_nb_requirements:main"
+repoma-self-check = "repoma.self_check:main"
+set-nb-cells = "repoma.set_nb_cells:main"
+
+[project.urls]
+Source = "https://github.com/ComPWA/repo-maintenance"
+Tracker = "https://github.com/ComPWA/repo-maintenance/issues"
+
+[tool.setuptools]
+include-package-data = false
+license-files = ["LICENSE"]
+package-dir = {"" = "src"}
+
+[tool.setuptools.package-data]
+repoma = [
+    ".github/*",
+    ".github/**/*",
+    ".template/*",
+    ".template/.*",
+    "py.typed",
+]
+
+[tool.setuptools.packages.find]
+namespaces = false
+where = ["src"]
 
 [tool.setuptools_scm]
 write_to = "src/repoma/version.py"
@@ -28,7 +141,6 @@ target-version = [
     "py310",
     "py311",
     "py312",
-    "py36",
     "py37",
     "py38",
     "py39",
@@ -130,6 +242,7 @@ extend-select = [
     "D",
     "EM",
     "ERA",
+    "FA",
     "I",
     "ICN",
     "INP",
