FIX: relink API with `sphinx-api-relink`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dev = [
 doc = [
     "Sphinx",
     "myst-parser",
+    "sphinx-api-relink",
     "sphinx-argparse",
     "sphinx-book-theme",
     "sphinx-copybutton",
