MAINT: remove `generate_api` function

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ doc =
     sphinx-argparse
     sphinx-book-theme
     sphinx-copybutton
+    sphinx-api-relink >=0.0.2
 test =
     pytest
     pytest-cov
