FIX: install `sphinx-api-relink` in `mypy` requriements

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,8 +63,8 @@ format =
     black
 mypy =
     mypy
+    sphinx-api-relink >=0.0.3
     types-PyYAML
-    types-requests
     types-setuptools
     types-toml
 lint =
