MAINT: clean up Sphinx configuration (#239)
* MAINT: set logo directly with external link
* MAINT: use helper functions from `sphinx-api-relink`

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ doc =
     sphinx-argparse
     sphinx-book-theme
     sphinx-copybutton
+    sphinx-api-relink >=0.0.3
 test =
     pytest
     pytest-cov
@@ -62,8 +63,8 @@ format =
     black
 mypy =
     mypy
+    sphinx-api-relink >=0.0.3
     types-PyYAML
-    types-requests
     types-setuptools
     types-toml
 lint =
