FEAT: run workflow on "update pip constraints" comment

--- a/src/repoma/.github/workflows/requirements.yml
+++ b/src/repoma/.github/workflows/requirements.yml
@@ -5,6 +5,9 @@ concurrency:
   cancel-in-progress: true
 
 on:
+  issue_comment:
+    types:
+      - created
   pull_request:
     branches:
       - main
