--- a/src/repoma/.github/workflows/requirements.yml
+++ b/src/repoma/.github/workflows/requirements.yml
@@ -1,10 +1,9 @@
 name: Requirements
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 on:
+  issue_comment:
+    types:
+      - created
   pull_request:
     branches:
       - main
