Revert "FEAT: run workflow on "update pip constraints" comment (#252)"
This reverts commit 904e78c5cf322f8a86b7fb284a6b97eb65025194.

--- a/src/repoma/.github/workflows/requirements.yml
+++ b/src/repoma/.github/workflows/requirements.yml
@@ -1,9 +1,10 @@
 name: Requirements
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
-  issue_comment:
-    types:
-      - created
   pull_request:
     branches:
       - main
