--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -26,6 +26,7 @@
   "unwantedRecommendations": [
     "bungcip.better-toml",
     "davidanson.vscode-markdownlint",
+    "garaioag.garaio-vscode-unwanted-recommendations",
     "ms-python.flake8",
     "ms-python.isort",
     "ms-python.pylint",
