DX: ignore missing module docstring in `conf.py`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -304,6 +304,7 @@ known-first-party = ["repoma"]
     "S113",
     "T201",
 ]
+"docs/conf.py" = ["D100"]
 "setup.py" = ["D100"]
 "tests/*" = [
     "D",
