--- a/pyproject.toml
+++ b/pyproject.toml
@@ -280,6 +280,7 @@ ignore = [
     "D416",
     "E501",
     "PLR0913",
+    "PLW1514",
     "PLW2901",
     "S301",
     "SIM108",
@@ -313,6 +314,7 @@ known-first-party = ["compwa_policy"]
     "PGH001",
     "PLR0913",
     "PLR2004",
+    "PLR6301",
     "S101",
     "T20",
 ]
