--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
         pass_filenames: false
         args:
           - --allow-labels
+          - --dependabot=update
           - --no-notebooks
           - --no-prettierrc
           - --no-pypi
