--- a/pyproject.toml
+++ b/pyproject.toml
@@ -235,6 +235,15 @@ testpaths = [
 
 [tool.ruff]
 extend-exclude = ["typings"]
+preview = true
+show-fixes = true
+src = [
+    "src",
+    "tests",
+]
+target-version = "py37"
+
+[tool.ruff.lint]
 extend-select = [
     "A",
     "B",
@@ -286,22 +295,13 @@ ignore = [
     "SIM108",
     "UP036",
 ]
-preview = true
-show-fixes = true
-src = [
-    "src",
-    "tests",
-]
-target-version = "py37"
 task-tags = ["cspell"]
 
-[tool.ruff.isort]
-known-first-party = ["compwa_policy"]
-
 [tool.ruff.lint.isort]
+known-first-party = ["compwa_policy"]
 split-on-trailing-comma = false
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "docs/*" = [
     "E402",
     "INP001",
@@ -322,7 +322,7 @@ split-on-trailing-comma = false
     "T20",
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.tomlsort]
